Fixed spacing and added 3 more topics

--- a/frontend/src/components/CategoryCard.css
+++ b/frontend/src/components/CategoryCard.css
@@ -1,6 +1,6 @@
 .category-card {
-  width: 300px;
-  height: 200px;
+  width: 325px;
+  height: 225px;
   background-color: #3b3b3b;
   border-radius: 10px;
   padding: 20px; 
@@ -15,7 +15,7 @@
 }
 
 .category-card:hover {
-  transform: scale(1.05); /* Scale effect on hover */
+  transform: scale(1.05);
 }
 
 .category-image {
@@ -26,7 +26,7 @@
 }
 
 .category-info {
-  margin-top: 10px; 
+  margin: 15px; 
   flex-grow: 1; 
   display: flex; 
   flex-direction: column; 
